Updated the reward logic, moved in an unique script.
Update the training: new network tracking obs

--- a/training/reinforcment.ipynb
+++ b/training/reinforcment.ipynb
@@ -134,6 +134,7 @@
         "from planner.dubins_planner import DubinsPlanner\n",
         "from models.trajectory_tracking_network import TTNetwork\n",
         "from utils.normalization import ObservationNormalizer\n",
+        "from utils.reward import TrajectoryTrackingReward\n",
         "\n",
         "# Check if CUDA is available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -208,6 +209,9 @@
         "# Initializa the input normalizer\n",
         "obs_normalizer = ObservationNormalizer(max_dist=3.0)\n",
         "\n",
+        "# Initilize the reward calculator\n",
+        "reward_calculator = TrajectoryTrackingReward()\n",
+        "\n",
         "gamma = GAMMA\n",
         "\n",
         "# Memory buffer for the current episode\n",
@@ -237,6 +241,32 @@
       },
       "outputs": [],
       "source": [
+        "def get_tracking_obs(target_waypoint, robot_state):\n",
+        "    # 1. Compute errors relative to this specific waypoint   \n",
+        "    dx = target_waypoint[0] - robot_state[0]\n",
+        "    dy = target_waypoint[1] - robot_state[1]\n",
+        "    \n",
+        "    # Rho: Distance to the target waypoint\n",
+        "    rho = np.sqrt(dx**2 + dy**2)\n",
+        "    \n",
+        "    # Alpha: Angle to the target waypoint (relative to robot heading)\n",
+        "    theta = env.state[2]\n",
+        "    alpha = np.arctan2(dy, dx) - theta\n",
+        "    # Normalize alpha to [-pi, pi]\n",
+        "    alpha = (alpha + np.pi) % (2 * np.pi) - np.pi\n",
+        "    \n",
+        "    # D_theta: Orientation error (target heading - robot heading)\n",
+        "    target_heading = target_waypoint[2]\n",
+        "    d_theta = target_heading - theta\n",
+        "    # Normalize d_theta to [-pi, pi]\n",
+        "    d_theta = (d_theta + np.pi) % (2 * np.pi) - np.pi\n",
+        "\n",
+        "    # 3. Create the new tracking observation\n",
+        "    # This replaces: tracking_obs = obs[:3]\n",
+        "    tracking_obs = np.array([rho, alpha, d_theta], dtype=np.float32)\n",
+        "    return tracking_obs\n",
+        "\n",
+        "\n",
         "def get_action(obs):\n",
         "    \"\"\"Samples an action and stores its log_probability.\"\"\"\n",
         "    # Use the imported normalizer to normaliza the inputs features to give the same relevance\n",
@@ -301,8 +331,8 @@
       "outputs": [],
       "source": [
         "# Global storage for the whole batch of trajectories\n",
-        "batch_log_probs = []\n",
-        "batch_returns = []\n",
+        "batch_log_probs = []        # store the actions log probabilities of an entire batch [ used during the update ]\n",
+        "batch_returns = []          # store the Retunr To Go of an entire batch [ used during the update ]\n",
         "\n",
         "def calculate_discounted_returns():\n",
         "    \"\"\"\n",
@@ -630,25 +660,21 @@
         }
       ],
       "source": [
-        "# --- Scaled Rewards ---\n",
-        "REWARD_GOAL = 200.0\n",
-        "REWARD_COLLISION = -200.0\n",
-        "REWARD_OFF_PATH = -200.0\n",
-        "REWARD_MAX_STEPS = -100.0\n",
-        "REWARD_CHECKPOINT = 10.0  # Per point cleared\n",
-        "PENALTY_STEP_ERROR = -0.1 # Per meter of error\n",
-        "\n",
-        "reward_history = []\n",
+        "reward_history = [] # Store the reward for each episode ( used for final plotting )\n",
         "\n",
         "print(\"Starting Training...\")\n",
         "\n",
+        "# Run all the episodes\n",
         "for episode in range(MAX_EPISODES):\n",
+        "    # Each episode is a different enviroment configuration\n",
         "    obs, info = env.reset()\n",
         "\n",
         "    start_pose = env.state\n",
         "    goal_pose = env.goal\n",
+        "\n",
+        "    # We change also the minimum radius of the dubins curve\n",
         "    random_radius = sample_radius()\n",
-        "    planner = DubinsPlanner(curvature_max=random_radius, step_size=0.2)\n",
+        "    planner = DubinsPlanner(curvature=random_radius, step_size=0.2)\n",
         "    path = planner.get_path(start_pose, goal_pose)\n",
         "    if path is None: continue\n",
         "\n",
@@ -659,61 +685,72 @@
         "\n",
         "    for t in range(MAX_STEPS):\n",
         "        old_idx = path_idx\n",
-        "        tracking_obs = obs[:3]\n",
+        "\n",
+        "        # --- 1. Forward: The network choose the action ---\n",
+        "        target_waypoint = path[path_idx]        # The goal is to reach the next waypoint of the path\n",
+        "        # Input of the network is the Ego-Centric Observation Vector: \n",
+        "        #   1. rho (ρ): [0, inf]        Euclidean distance to the goal.        \n",
+        "        #   2. alpha (α): [-pi, pi]     The angle of the goal *relative* to the robot's current heading.\n",
+        "        #   3. d_theta (δθ): [-pi, pi]  The difference between the desired goal orientation and current heading.\n",
+        "        tracking_obs = get_tracking_obs(target_waypoint, env.state[:2])       \n",
         "        action = get_action(tracking_obs)\n",
         "\n",
-        "        # 1. Environment Step\n",
-        "        obs, env_reward, terminated, truncated, info = env.step(action)\n",
+        "        # --- 2. Environment Step ---\n",
+        "        obs, terminated, truncated, info = env.step(action)\n",
         "\n",
-        "        # 2. Update Path Tracking Logic\n",
-        "        path_xy = path[:, :2]\n",
-        "        dists = np.linalg.norm(path_xy - env.state[:2], axis=1)\n",
-        "        current_tracking_error = np.min(dists)\n",
+        "\n",
+        "        # --- 3. Update Path Tracking Logic ---\n",
+        "        # ( understand which waypoint of the track the robot is near)\n",
+        "        # 1) extract all the path waypoints (x,y) coordinates\n",
+        "        path_xy = path[:, :2]           \n",
+        "        # 2) compute the distance between the current robot position and all the waypoints                            \n",
+        "        dists = np.linalg.norm(path_xy - env.state[:2], axis=1)     \n",
+        "        # 3) take the minimum distance, this is consider as the 'tracking error'\n",
+        "        current_tracking_error = np.min(dists)             # current_tracking_error = 'distance to the closest waypoint'    \n",
         "        episode_errors.append(current_tracking_error)\n",
         "\n",
+        "        # 4) Derive the waypoint id closest to the robot, it tell us the robot position respect to the path\n",
         "        closest_idx = np.argmin(dists)\n",
+        "        # 5) Now the goal of the robot is to reach the next waypoint \n",
         "        lookahead_idx = closest_idx + 1\n",
+        "        # This check is used to menage strang behavior as the robot by moving randomly go revers to the path\n",
         "        if lookahead_idx > path_idx and lookahead_idx < len(path):\n",
         "            path_idx = lookahead_idx\n",
         "\n",
-        "        # 3. Calculate Shaped Reward\n",
-        "        # Determine if we made progress this step\n",
-        "        path_idx_increased = (path_idx > old_idx)\n",
         "\n",
-        "        # Dense reward for staying close to current sequential target\n",
-        "        step_reward = PENALTY_STEP_ERROR * current_tracking_error\n",
+        "        # 3. --- Calculate Step Reward ---\n",
+        "        # Calculate checkpoints cleared\n",
+        "        checkpoints_cleared = max(0, path_idx - old_idx)\n",
         "\n",
-        "        if path_idx_increased:\n",
-        "            # Small \"breadcrumb\" reward for hitting checkpoints\n",
-        "            num_points_cleared = path_idx - old_idx\n",
-        "            step_reward += REWARD_CHECKPOINT * num_points_cleared\n",
-        "\n",
-        "        # 4. Override with terminal rewards if necessary\n",
-        "        dist_to_final = np.linalg.norm(env.state[:2] - goal_pose[:2])\n",
-        "        is_success = dist_to_final < 0.1 and path_idx >= len(path) - 2\n",
-        "\n",
-        "        if is_success:\n",
-        "            step_reward += REWARD_GOAL\n",
+        "        if info['is_success']:\n",
         "            terminated = True\n",
-        "            breack_reason = \"Goal Reached\"\n",
+        "            terminal_reason = \"goal\"\n",
         "        elif info['collision']:\n",
-        "            step_reward += REWARD_COLLISION\n",
         "            terminated = True\n",
-        "            breack_reason = \"Collision\"\n",
+        "            terminal_reason = \"collision\"\n",
         "        elif current_tracking_error > 2.0:\n",
-        "            step_reward += REWARD_OFF_PATH\n",
         "            terminated = True\n",
-        "            breack_reason = \"Too Far from Path\"\n",
+        "            terminal_reason = \"off_path\"\n",
+        "        elif t >= MAX_STEPS - 1:\n",
+        "            truncated = True\n",
+        "            terminal_reason = \"timeout\"\n",
+        "        \n",
+        "        # 4. Compute the Reward\n",
+        "        # Pass the tracking observation (rho, alpha, d_theta), action, and status\n",
+        "        step_reward = reward_calculator.compute_reward(\n",
+        "            tracking_obs=tracking_obs,\n",
+        "            action=action,\n",
+        "            checkpoints_cleared=checkpoints_cleared,\n",
+        "            terminal_reason=terminal_reason\n",
+        "        )\n",
         "\n",
         "        # 5. Store and Accumulate\n",
         "        store_reward(step_reward)\n",
         "        ep_reward += step_reward\n",
         "\n",
+        "        # 6. Brake the episod if it is terminated or truncated\n",
         "        if terminated or truncated:\n",
         "            break\n",
-        "\n",
-        "    if breack_reason == \"Max step reached\":\n",
-        "        ep_reward += REWARD_MAX_STEPS\n",
         "\n",
         "    # Update logic (discounting, logging, etc.)\n",
         "    calculate_discounted_returns()\n",
@@ -722,7 +759,7 @@
         "\n",
         "    # 4. If we have collected 'm' trajectories, perform the update\n",
         "    if (episode + 1) % BATCH_SIZE == 0:\n",
-        "        update() # This effectively divides by m\n",
+        "        update() \n",
         "        print(f\"Update performed at episode {episode}\")\n",
         "\n",
         "    reward_history.append(ep_reward)\n",
@@ -912,7 +949,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.14.2"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
