Fic the trainign noteboock commetns

--- a/training/reinforcment_baseline.ipynb
+++ b/training/reinforcment_baseline.ipynb
@@ -73,8 +73,7 @@
       },
       "source": [
         "### Cell 1: Imports & Global Setup\n",
-        "\n",
-        "**Purpose**: This cell initializes all core dependencies and defines shared configuration variables."
+        "This cell initializes all core dependencies and defines shared configuration variables."
       ]
     },
     {
@@ -136,8 +135,7 @@
       },
       "source": [
         "### Cell 2: Experiment Configuration \n",
-        "\n",
-        "**Purpose**: Defines hyperparameters and experiment-level settings."
+        "Defines hyperparameters and experiment-level settings; plus intialize the directory for all the output of the training"
       ]
     },
     {
@@ -186,8 +184,7 @@
       },
       "source": [
         "### Cell 3 – Environment Initialization\n",
-        "\n",
-        "**Purpose** = Creates the reinforcement learning environment."
+        "Creates the reinforcement learning environment."
       ]
     },
     {
@@ -240,11 +237,12 @@
       "id": "110b4271",
       "metadata": {},
       "source": [
-        "### Cell 4: Networks Initialization\n",
-        "We use two network:\n",
+        "### 4. Networks Initialization\n",
         "\n",
-        "    1. TTNetwork: Trajectory Tracking Network, out policy that should learn which action take\n",
-        "    2. ValueNetwork: Learn to estimate the value function, used as baseline "
+        "We initialize two primary networks for our agent:\n",
+        "\n",
+        "* **TTNetwork (Trajectory Tracking Network):** This is our **Policy Network (Actor)**. It learns the mapping from states to actions, determining the best step to take at any given time.\n",
+        "* **ValueNetwork:** This is our **Value Function Estimator (Critic)**. It learns to estimate the value of being in a specific state, providing a **baseline** to help stabilize the learning process."
       ]
     },
     {
@@ -278,12 +276,17 @@
       "id": "afd6c402",
       "metadata": {},
       "source": [
-        "### Cell 5: Data Managmement"
+        "### Cell 5: Data Managmement\n",
+        "\n",
+        "The TrajectoryBuffer class acts as the central repository for all agent experiences accumulated during the training. In this way we have a clean and structured data management\n",
+        "\n",
+        "**Key Logic**: Returns-to-GoThe finish_episode method implements the discounted return calculation ($G_t$). This converts immediate rewards into a long-term signal, which is essential for the Policy Gradient update:\n",
+        "$$G_t = \\sum_{k=0}^{\\infty} \\gamma^k r_{t+k}$$"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "5c82a23f",
       "metadata": {},
       "outputs": [],
@@ -367,20 +370,26 @@
         "id": "5a445984"
       },
       "source": [
-        "### Cell 5: Helpers\n",
-        "We have two main helpers:\n",
+        "### 6. Helper Functions\n",
         "\n",
-        "*get_tracking_obs*: \n",
+        "📍 Path Tracking & State Preparation\n",
+        "The primary challenge is transforming a \"reach-the-goal\" environment into a \"follow-the-path\" task.\n",
         "\n",
-        "    The enviroment observable is the rho, alpha and d_theta respect to the fianl goal. But we want that the policy learn to follow a trajectory, not reaching the final goal. So it objective is to reach the waypoint of the path, so it must to observe rho, alpha and d_theta respect to the next waypoint.\n",
+        "* **`get_tracking_obs`**\n",
+        "    The environment's default observation provides data relative to a final static goal. This function recalculates the state so the agent observes its position relative to the **next waypoint** identified above:\n",
+        "    * **$\\rho$**: Distance to the current waypoint.\n",
+        "    * **$\\alpha$**: Angle to the waypoint relative to the agent's heading.\n",
+        "    * **$\\Delta\\theta$**: Orientation error relative to the desired path direction.\n",
         "\n",
-        "*get_path_tracking_info*:\n",
+        "* **`get_path_tracking_info`**\n",
+        "    Finding the next waypoint is non-trivial because the agent—especially during early training—may overshoot or miss a point. A simple incremental index is not robust enough. \n",
+        "    * **Logic:** We identify the waypoint **closest** to the agent's current position and then target the **waypoint immediately following it**. \n",
         "\n",
-        "    The policy need to learn to reach the next waypoint; so we need to define the next waypoint. This is not so easy becouse the policy, expecialy at the beginning, miss the waypoints alon, so a simpler incremental aproach is not sufficient. So we define the next waypoint as the waypoint after the most near waypoint\n",
         "\n",
-        "*gel_action*: \n",
+        "🎮 Action Selection\n",
         "\n",
-        "    Use the current policy to get the next action, it make a sample ( sthocastic ) to ensure exploration"
+        "* **`get_action`**\n",
+        "    This function interfaces with the **TTNetwork** to determine movement.Rather than choosing the single \"best\" action, we sample from the policy's probability distribution. This randomness is crucial during training; it ensures the agent explores different trajectories to find the most efficient path rather than getting stuck in a local optimum."
       ]
     },
     {
@@ -486,35 +495,22 @@
         "id": "d5a65dfe"
       },
       "source": [
-        "### Cell 7: Reinforce Update - With State-Value Baseline\n",
+        "### 7. REINFORCE Update (with State-Value Baseline)\n",
         "\n",
-        "1. PREPARE BATCH DATA:\n",
-        "   - Convert the list of cumulative returns (G_t) into a tensor.\n",
-        "   - Reshape returns to (N, 1) to ensure compatibility with network output.\n",
-        "   - Concatenate all observations from the batch into a single tensor.\n",
+        "This cell implements the training step for the Actor-Critic architecture. We use the **Advantage**—the difference between the actual return and the baseline—to reduce gradient variance and stabilize learning.\n",
         "\n",
-        "2. UPDATE VALUE NETWORK (THE CRITIC/BASELINE):\n",
-        "   - Perform a forward pass to predict state values V(x_t).\n",
-        "   - Calculate the Mean Squared Error (MSE) loss: ||V(x_t) - G_t||^2.\n",
-        "   - Backpropagate the error and update Value Network weights to minimize prediction error.\n",
+        "🔄 The Update Process\n",
         "\n",
-        "3. CALCULATE AND NORMALIZE ADVANTAGE (A_t):\n",
-        "   - Compute the Advantage: A_t = G_t - V(x_t).\n",
-        "   - Detach predicted values to prevent policy gradients from affecting the Baseline.\n",
-        "   - Apply Batch-Wise Normalization to A_t to stabilize the scale of policy updates.\n",
-        "\n",
-        "4. CALCULATE POLICY LOSS:\n",
-        "   - Iterate through sampled actions to calculate: Policy Loss = -log(π(u_t | x_t)) * A_t.\n",
-        "   - The Advantage (A_t) determines the direction and magnitude of the reinforcement.\n",
-        "\n",
-        "5. UPDATE POLICY NETWORK:\n",
-        "   - Sum individual losses and average them by the Batch Size.\n",
-        "   - Perform backpropagation to calculate policy gradients.\n",
-        "   - Apply gradient clipping and update policy parameters (theta).\n",
-        "\n",
-        "6. CLEANUP & MEMORY MANAGEMENT:\n",
-        "   - Clear all batch-level buffers (log_probs, returns, observations).\n",
-        "   - This is critical to prevent memory leaks and redundant data accumulation."
+        "1.  **Prepare Batch Data:** Convert cumulative returns ($G_t$) and observations into tensors, ensuring shapes are compatible for vectorized processing.\n",
+        "2.  **Update Value Network (The Critic):**\n",
+        "    * Perform a forward pass to predict state values $V(s_t)$.\n",
+        "    * Minimize the **MSE Loss**: $||V(s_t) - G_t||^2$ to improve the baseline's accuracy.\n",
+        "3.  **Calculate Advantage ($A_t$):** * Compute $A_t = G_t - V(s_t)$. \n",
+        "    * Normalize the advantage across the batch to keep the scale of policy updates consistent.\n",
+        "4.  **Calculate Policy Loss:** * Compute the loss using the formula: $L = -\\log(\\pi(a_t | s_t)) \\cdot A_t$.\n",
+        "    * Positive advantage increases action probability; negative advantage decreases it.\n",
+        "5.  **Update Policy Network (The Actor):** * Apply gradient clipping to prevent exploding gradients and update weights via backpropagation.\n",
+        "6.  **Memory Management:** Clear batch buffers (log_probs, returns, observations) to prevent memory leaks and ensure the next batch starts fresh."
       ]
     },
     {
@@ -599,7 +595,22 @@
         "id": "07f76da5"
       },
       "source": [
-        "### Cell 8: Training"
+        "### Cell 8: Training\n",
+        "\n",
+        "This cell executes the main training cycle. The process is divided into environment setup, agent interaction, and batch-wise policy updates.\n",
+        "\n",
+        "🏋️ The Training Workflow\n",
+        "\n",
+        "1.  **Episode Setup:** For each episode, we sample a new random seed and plan a smooth trajectory using a **Dubins Path Planner** with varying curvatures.\n",
+        "2.  **Interaction Loop (The Episode):**\n",
+        "    * **State Transformation:** The raw environment state is converted into an **Ego-Centric Observation** $(\\rho, \\alpha, \\delta\\theta)$ relative to the next waypoint.\n",
+        "    * **Action & Environment Step:** The agent samples an action from the policy, moves, and receives a reward based on tracking accuracy and terminal status.\n",
+        "    * **Terminal Conditions:** Episodes end if the agent reaches the goal, collides, wanders too far off-path (`error > 2.0`), or times out.\n",
+        "3.  **Batch Learning:** Every `BATCH_SIZE` episodes, the `update()` function is called to perform backpropagation on both the Policy and Value networks.\n",
+        "4.  **Early Stopping & Checkpointing:**\n",
+        "    * The model monitors the **Average Reward** of the last batch.\n",
+        "    * If a new best performance is achieved, the model weights are saved to disk.\n",
+        "    * If performance plateaus for a defined period (`PATIENCE`), training terminates early to prevent overfitting."
       ]
     },
     {
