Final Fixed after the write down of the report

--- a/training/reinforcment.ipynb
+++ b/training/reinforcment.ipynb
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 1,
       "id": "efb0bce8",
       "metadata": {
         "colab": {
@@ -920,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "e0ddbc29",
       "metadata": {},
       "outputs": [
@@ -928,28 +928,26 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "--> Loading Model: experiments/run_20260109_100247/policy_model.ph\n",
+            "--> Loading Model: v1_no_baseline/policy_model.ph\n",
             "RL Controller loaded successfully on cuda\n",
             "Starting 50 episodes...\n",
-            "SIMULATION: Truncated after max_steps: 1000   env seed: 20\n",
-            "SIMULATION: Truncated after max_steps: 1000   env seed: 41\n",
             "Progress: 50/50\n",
             "Evaluation Complete.\n",
             "\n",
             "============================================================\n",
             " EVALUATION REPORT: last_run\n",
             "============================================================\n",
-            "╒══════════════╤═══════════════╤═══════════════╤═══════════════════╤══════════════╤═════════════════╕\n",
-            "│ Metric       │ Value         │ Metric        │ Value             │ Metric       │ Value           │\n",
-            "╞══════════════╪═══════════════╪═══════════════╪═══════════════════╪══════════════╪═════════════════╡\n",
-            "│ Status       │ ⚠️ GOOD       │ Mean CTE      │ 0.0246 ± 0.0582 m │ Avg Velocity │ 0.92 ± 0.13 m/s │\n",
-            "├──────────────┼───────────────┼───────────────┼───────────────────┼──────────────┼─────────────────┤\n",
-            "│ Success Rate │ 96.0 %        │ Max CTE (Avg) │ 0.0520 m          │ Smoothness   │ 0.0785 ± 0.0597 │\n",
-            "├──────────────┼───────────────┼───────────────┼───────────────────┼──────────────┼─────────────────┤\n",
-            "│ Steps (Avg)  │ 261.1 ± 168.0 │ Tortuosity    │ 1.152 ± 0.761     │ Avg Energy   │ 13.67 ± 7.51    │\n",
-            "╘══════════════╧═══════════════╧═══════════════╧═══════════════════╧══════════════╧═════════════════╛\n",
+            "╒══════════════╤══════════════╤═══════════════╤═══════════════════╤══════════════╤═════════════════╕\n",
+            "│ Metric       │ Value        │ Metric        │ Value             │ Metric       │ Value           │\n",
+            "╞══════════════╪══════════════╪═══════════════╪═══════════════════╪══════════════╪═════════════════╡\n",
+            "│ Status       │ ✅ EXCELLENT │ Mean CTE      │ 0.0103 ± 0.0015 m │ Avg Velocity │ 0.95 ± 0.01 m/s │\n",
+            "├──────────────┼──────────────┼───────────────┼───────────────────┼──────────────┼─────────────────┤\n",
+            "│ Success Rate │ 100.0 %      │ Max CTE (Avg) │ 0.0282 m          │ Smoothness   │ 0.0559 ± 0.0092 │\n",
+            "├──────────────┼──────────────┼───────────────┼───────────────────┼──────────────┼─────────────────┤\n",
+            "│ Steps (Avg)  │ 295.1 ± 26.8 │ Tortuosity    │ 1.000 ± 0.001     │ Avg Energy   │ 15.15 ± 1.34    │\n",
+            "╘══════════════╧══════════════╧═══════════════╧═══════════════════╧══════════════╧═════════════════╛\n",
             "\n",
-            "Report saved to text file: experiments/run_20260109_100247/evaluation_report.txt\n"
+            "Report saved to text file: v1_no_baseline/evaluation_report.txt\n"
           ]
         }
       ],
