Add the store of the loss history

--- a/training/navigation.ipynb
+++ b/training/navigation.ipynb
@@ -406,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "0542a62a",
       "metadata": {},
       "outputs": [],
@@ -476,6 +476,11 @@
         "        \n",
         "        self.actor_optimizer = optim.Adam(self.actor.parameters(), lr=LR_ACTOR)\n",
         "        self.critic_optimizer = optim.Adam(self.critic.parameters(), lr=LR_CRITIC)\n",
+        "\n",
+        "        self.loss_history = []\n",
+        "        self.policy_loss_history = []\n",
+        "        self.value_loss_history = []\n",
+        "        self.entropy_history = []\n",
         "\n",
         "\n",
         "    def get_action(self, obs):\n",
@@ -553,6 +558,12 @@
         "                    mb_advantages, mb_returns, \n",
         "                    new_values, dist\n",
         "                )\n",
+        "\n",
+        "                # Loss Final Log\n",
+        "                self.loss_history.append(loss)\n",
+        "                self.policy_loss_history.append(policy_loss)\n",
+        "                self.value_loss_history.append(value_loss)\n",
+        "                self.entropy_history.append(entropy)\n",
         "\n",
         "                # --- Backward Pass ---\n",
         "                self.actor_optimizer.zero_grad()\n",
@@ -989,7 +1000,7 @@
         "id": "534aaeb7"
       },
       "source": [
-        "Cell 7: Visualization & Save\n",
+        "### Cell 7: Visualization & Save\n",
         "Plot the learning curve to verify convergence."
       ]
     },
@@ -1037,107 +1048,111 @@
         }
       ],
       "source": [
-        "import os\n",
-        "import torch\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from datetime import datetime\n",
+        "# from google.colab.patches import cv2_imshow # Use this if on Google Colab\n",
         "\n",
-        "# --- 1. SETUP DIRECTORY STRUCTURE ---\n",
-        "current_time = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-        "run_id = f\"ppo_nav_{current_time}\"\n",
+        "def plot_training_status(trajectory, goal, episode_num, env, agent):\n",
+        "    \"\"\"\n",
+        "    Plots the spatial trajectory, reward components, zone transition, and PPO loss analysis.\n",
+        "    \"\"\"\n",
         "\n",
-        "# Use the drive_path defined earlier or local experiments folder\n",
-        "base_output_path = os.path.join(drive_path, \"experiments\") if 'drive_path' in locals() else \"experiments\"\n",
-        "output_dir = os.path.join(base_output_path, run_id)\n",
-        "os.makedirs(output_dir, exist_ok=True)\n",
+        "    # --- Part A: Render Spatial Trajectory (OpenCV) ---\n",
+        "    height, width = 500, 500\n",
+        "    scale = 50\n",
+        "    center_x, center_y = width // 2, height // 2\n",
+        "    canvas = np.ones((height, width, 3), dtype=np.uint8) * 255\n",
+        "    to_pixel = lambda x, y: (int(center_x + x * scale), int(center_y - y * scale))\n",
         "\n",
-        "print(f\"Results will be saved to: {output_dir}\")\n",
+        "    # Draw Obstacles\n",
+        "    for vertices in env.obstacle_manager.get_all_vertices():\n",
+        "        pts = np.array([to_pixel(v[0], v[1]) for v in vertices], dtype=np.int32)\n",
+        "        cv2.fillPoly(canvas, [pts], (0, 0, 255))\n",
+        "        cv2.polylines(canvas, [pts], True, (0, 0, 150), 2)\n",
         "\n",
-        "# --- 2. PREPARE DATA ---\n",
+        "    # Draw Goal and Heading\n",
+        "    gx, gy = to_pixel(goal[0], goal[1])\n",
+        "    cv2.circle(canvas, (gx, gy), int(0.2 * scale), (0, 255, 0), -1)\n",
+        "    end_gx = gx + int(20 * np.cos(goal[2]))\n",
+        "    end_gy = gy - int(20 * np.sin(goal[2]))\n",
+        "    cv2.arrowedLine(canvas, (gx, gy), (end_gx, end_gy), (0, 100, 0), 2)\n",
         "\n",
-        "# Unpack the new history structure: (reward, info, truncated)\n",
-        "# reward_history should be a list of tuples: [(r, info, trunc), ...]\n",
-        "clean_rewards = [h[0] for h in reward_history]\n",
-        "infos = [h[1] for h in reward_history]\n",
-        "truncations = [h[2] for h in reward_history]\n",
+        "    # Draw Path\n",
+        "    if len(trajectory) > 0:\n",
+        "        path_pixels = np.array([to_pixel(pt[0], pt[1]) for pt in trajectory], dtype=np.int32)\n",
+        "        cv2.polylines(canvas, [path_pixels.reshape((-1, 1, 2))], False, (255, 0, 0), 2)\n",
+        "    \n",
         "\n",
-        "# Extract specific outcomes from info dictionaries\n",
-        "success_history = [1 if i.get('is_success', False) else 0 for i in infos]\n",
-        "collision_history = [1 if i.get('collision', False) else 0 for i in infos]\n",
-        "timeout_history = [1 if t else 0 for t in truncations]\n",
+        "     # --- Part B: Plotting with Matplotlib ---\n",
+        "    # Changed to 2x2 Grid to accommodate the Loss Plot\n",
+        "    fig, axs = plt.subplots(2, 2, figsize=(15, 10))\n",
         "\n",
-        "# Calculate moving averages for smoother visualization (window of 20)\n",
-        "def moving_avg(data, window=20):\n",
-        "    if len(data) < window: return data\n",
-        "    return np.convolve(data, np.ones(window)/window, mode='valid')\n",
+        "    # --- PLOT 1: Trajectory Rendering (Top-Left) ---\n",
+        "    ax1 = axs[0, 0]\n",
+        "    ax1.imshow(cv2.cvtColor(canvas, cv2.COLOR_BGR2RGB))\n",
+        "    ax1.set_title(f\"Episode {episode_num}: Trajectory\")\n",
+        "    ax1.axis('off')\n",
         "\n",
-        "smooth_success = moving_avg(success_history)\n",
-        "smooth_collision = moving_avg(collision_history)\n",
-        "smooth_timeout = moving_avg(timeout_history)\n",
+        "    # Get reward history\n",
+        "    hist = reward_calculator.history\n",
         "\n",
-        "# --- 3. PLOTTING ---\n",
-        "fig, axs = plt.subplots(1, 3, figsize=(22, 6))\n",
+        "    # --- PLOT 2: Raw Reward Analysis (Top-Right) ---\n",
+        "    ax2 = axs[0, 1]\n",
+        "    ax2.plot(hist['total'], label='Total Reward', color='black', linewidth=2)\n",
+        "    ax2.plot(hist['alignment_reward'], label='Alignment (Raw)', alpha=0.5, linestyle='--')\n",
+        "    ax2.plot(hist['closer_reward'], label='Closer', alpha=0.5)\n",
+        "    ax2.plot(hist['pointing_reward'], label='Pointing', alpha=0.5)\n",
+        "    ax2.plot(hist['obstacle_reward'], label='Obstacle', color='red', alpha=0.6)\n",
         "\n",
-        "# Plot 1: Total Reward (Same as before)\n",
-        "axs[0].plot(clean_rewards, color='tab:blue', alpha=0.3, label=\"Raw Reward\")\n",
-        "if len(clean_rewards) > 50:\n",
-        "    rolling_avg = np.convolve(clean_rewards, np.ones(50)/50, mode='valid')\n",
-        "    axs[0].plot(rolling_avg, color='tab:blue', linewidth=2, label=\"MA 50\")\n",
-        "axs[0].set_title(\"Total Reward per Episode\")\n",
-        "axs[0].set_xlabel(\"Episode\")\n",
-        "axs[0].set_ylabel(\"Reward\")\n",
-        "axs[0].legend()\n",
-        "axs[0].grid(True, alpha=0.3)\n",
+        "    ax2.set_title(\"Raw Reward Components\")\n",
+        "    ax2.set_xlabel(\"Steps\")\n",
+        "    ax2.set_ylabel(\"Reward Value\")\n",
+        "    ax2.legend(loc='lower left', fontsize='x-small')\n",
+        "    ax2.grid(True, alpha=0.3)\n",
         "\n",
-        "# Plot 2: Outcome Breakdown (Success vs Collision vs Timeout)\n",
-        "# We plot the smoothed versions to see the training trend clearly\n",
-        "axs[1].plot(smooth_success, color='tab:green', linewidth=2, label=\"Success Rate\")\n",
-        "axs[1].plot(smooth_collision, color='tab:red', linewidth=2, label=\"Collision Rate\")\n",
-        "axs[1].plot(smooth_timeout, color='tab:orange', linewidth=2, linestyle='--', label=\"Timeout Rate\")\n",
+        "    # --- PLOT 3: Zone Transition (Bottom-Left) ---\n",
+        "    ax3 = axs[1, 0]\n",
+        "    ax3.plot(hist['nav_weight'], label='Nav Component (Zone 1)', color='blue')\n",
+        "    ax3.plot(hist['dock_weight'], label='Dock Component (Zone 2)', color='orange')\n",
+        "    ax3.axhline(0, color='grey', linestyle=':', linewidth=1)\n",
         "\n",
-        "axs[1].set_title(\"Episode Outcomes (Moving Avg 20)\")\n",
-        "axs[1].set_xlabel(\"Episode\")\n",
-        "axs[1].set_ylabel(\"Probability\")\n",
-        "axs[1].set_ylim([-0.05, 1.05])\n",
-        "axs[1].legend(loc='upper left')\n",
-        "axs[1].grid(True, alpha=0.3)\n",
+        "    ax3.set_title(\"Zone Logic Transition\")\n",
+        "    ax3.set_xlabel(\"Steps\")\n",
+        "    ax3.legend(loc='upper right')\n",
+        "    ax3.grid(True, alpha=0.3)\n",
         "\n",
-        "# # Plot 3: Loss Components (Kept as requested)\n",
-        "# if 'loss_history' in locals() and len(loss_history) > 0:\n",
-        "#     axs[2].plot(clean_history(loss_history), color='tab:purple')\n",
-        "#     axs[2].set_title(\"Total PPO Loss\")\n",
-        "#     axs[2].set_xlabel(\"Batch Update\")\n",
-        "#     axs[2].grid(True, alpha=0.3)\n",
-        "# else:\n",
-        "axs[2].text(0.5, 0.5, \"Loss data not found.\\nEnsure update_ppo logs loss.\",\n",
-        "            ha='center', va='center')\n",
-        "axs[2].set_title(\"Loss Monitoring\")\n",
+        "    # --- PLOT 4: PPO Loss Analysis (Bottom-Right) ---\n",
+        "    ax4 = axs[1, 1]\n",
+        "    \n",
+        "    # Helper to convert potential tensors to cpu floats for plotting\n",
+        "    def extract_data(data_list):\n",
+        "        if not data_list: return []\n",
+        "        if torch.is_tensor(data_list[0]):\n",
+        "            return [x.detach().cpu().item() for x in data_list]\n",
+        "        return data_list\n",
         "\n",
-        "plt.suptitle(f\"PPO Navigation Training Metrics - {run_id}\", fontsize=16)\n",
-        "plt.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
+        "    if len(agent.loss_history) > 0:\n",
+        "        # PPO updates occur less frequently than steps, so x-axis is \"Updates\"\n",
+        "        total_loss = extract_data(agent.loss_history)\n",
+        "        policy_loss = extract_data(agent.policy_loss_history)\n",
+        "        value_loss = extract_data(agent.value_loss_history)\n",
+        "        entropy = extract_data(agent.entropy_history)\n",
         "\n",
-        "# Save the plot\n",
-        "plot_filename = \"training_summary.png\"\n",
-        "plt.savefig(os.path.join(output_dir, plot_filename))\n",
-        "plt.show()\n",
+        "        ax4.plot(total_loss, label='Total Loss', color='black', linewidth=1.5)\n",
+        "        ax4.plot(policy_loss, label='Policy Loss', color='red', alpha=0.6, linestyle='--')\n",
+        "        ax4.plot(value_loss, label='Value Loss (MSE)', color='blue', alpha=0.6, linestyle='--')\n",
+        "        # Entropy is often small, plotting on twinx might be better, but plotting here for overview\n",
+        "        ax4.plot(entropy, label='Entropy', color='green', alpha=0.6, linestyle=':')\n",
         "\n",
-        "# --- 4. SAVING MODEL AND DATA ---\n",
-        "# Save the complete agent (Actor + Critic)\n",
-        "model_filename = \"nav_agent_final.pth\"\n",
-        "torch.save(agent.state_dict(), os.path.join(output_dir, model_filename))\n",
+        "        ax4.set_title(\"PPO Loss Components\")\n",
+        "        ax4.set_xlabel(\"PPO Updates\")\n",
+        "        ax4.set_ylabel(\"Loss Value\")\n",
+        "        ax4.legend(loc='upper right', fontsize='x-small')\n",
+        "        ax4.grid(True, alpha=0.3)\n",
+        "    else:\n",
+        "        ax4.text(0.5, 0.5, \"No Training Updates Yet\", ha='center', va='center')\n",
+        "        ax4.axis('off')\n",
         "\n",
-        "# Save histories for post-training comparison\n",
-        "np.save(os.path.join(output_dir, \"reward_history.npy\"), np.array(clean_rewards))\n",
-        "np.save(os.path.join(output_dir, \"success_history.npy\"), np.array(success_history))\n",
-        "np.save(os.path.join(output_dir, \"collision_history.npy\"), np.array(collision_history))\n",
-        "\n",
-        "print(\"-\" * 30)\n",
-        "print(f\"TRAINING SUMMARY SAVED\")\n",
-        "print(f\"Final Success Rate (last 20 eps): {np.mean(success_history[-20:]):.2%}\")\n",
-        "print(f\"Model: {model_filename}\")\n",
-        "print(f\"Plots: {plot_filename}\")\n",
-        "print(\"-\" * 30)"
+        "    plt.tight_layout()\n",
+        "    plt.show()"
       ]
     },
     {
