--- a/training/reinforcment.ipynb
+++ b/training/reinforcment.ipynb
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "7c4967fd",
       "metadata": {
         "id": "7c4967fd"
@@ -214,7 +214,7 @@
         "\n",
         "\n",
         "# INIT THE ENVIROMENT \n",
-        "env = UnicycleEnv()\n",
+        "env = UnicycleEnv('empty_env')\n",
         "\n",
         "# INIT THE REWARD CALCULATOR  \n",
         "reward_calculator = TrajectoryTrackingReward()\n",
