--- a/training/reinforcment_baseline.ipynb
+++ b/training/reinforcment_baseline.ipynb
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "7c4967fd",
       "metadata": {
         "id": "7c4967fd"
@@ -206,7 +206,7 @@
         "\n",
         "\n",
         "# INIT THE ENVIROMENT \n",
-        "env = UnicycleEnv()\n",
+        "env = UnicycleEnv('empty_env')\n",
         "\n",
         "# INIT THE REWARD CALCULATOR  \n",
         "reward_calculator = TrajectoryTrackingReward()\n",
